--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             };
             
             window.loaderLocation = locations[li];
-            t.src = locations[li]+"js/loader.js?rcid="+(new Date()).getTime();
+            t.src = "js/loader.js?rcid="+(new Date()).getTime();
             n = document.getElementsByTagName('script')[0];
             n.parentNode.insertBefore(t,n);
         };
